--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.14.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-otp-input-enhanced": "^1.0.7"
+    "react-native-otp-input-enhanced": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
